# flutter_rust_api_translate

./: Cargo.toml  README.md  justfile
src/: lib.rs
src/opt/: crate_info.rs  customize.rs  file.rs  handle_use_info.rs  mod.rs  rust_input.rs
src/opt/crate_info/: intersection.rs  module_info.rs  remove_dependencies.rs
src/opt/generate/: generate_bound_enum_file.rs  generate_dart_ffi.rs  mod.rs
src/opt/rust_input/: file.rs  func.rs  get_api_name.rs
