[package]
edition = "2021"
name = "flutter_rust_api_translate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "^0.15.2"
derive_builder = "^0.12.0"
flutter_rust_bridge_codegen = "^1.53.0"
itertools = "^0.10.5"
log = "^0.4"
syn = {version = "^1.0.77", features = ["full", "extra-traits"]}
