[package]
edition = "2021"
name = "flutter_rust_api_translate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "^0.15.2"
convert_case = "^0.6.0"
derive_builder = "^0.12.0"
flutter_rust_bridge_codegen = {version = "^1.53.0", features = [
  "chrono",
  "uuid",
]}
itertools = "^0.10.5"
log = "^0.4"
syn = {version = "^1.0.77", features = ["full", "extra-traits"]}
